# wakarusa

./: .gitignore  LICENSE  LICENSE.save0  Makefile  README.md  wakarusa.cabal
ideas/: JsonRpc.hs  OO.hs
src/Control/: Natural.hs  Transformation.hs
src/Control/Natural/: JsonRpc.hs  MVar.hs  Remote.hs  Session.hs
src/Control/Wakarusa/: Functor.hs  JsonRpc.hs  Scotty.hs  Session.hs
wakarusa/: wakarusa.cabal
wakarusa-examples/: wakarusa-examples.cabal
wakarusa-examples/json-rpc/: JsonRpc.hs  JsonRpcServer.hs  Square.hs
wakarusa-examples/small-dsl/: DSL.hs
wakarusa-examples/sunroof-lite/: JavaScript.hs  Main.hs
wakarusa-scotty/: wakarusa-scotty.cabal
wakarusa-scotty/Control/Wakarusa/: Scotty.hs
wakarusa-scotty/Control/Wakarusa/Session/: Scotty.hs
wakarusa-wreq/: wakarusa-wreq.cabal
wakarusa-wreq/Control/Wakarusa/: Wreq.hs
wakarusa-wreq/Control/Wakarusa/Session/: Wreq.hs
wakarusa/Control/: Natural.hs
wakarusa/Control/Monad/: Normal.hs
wakarusa/Control/Wakarusa/: Functor.hs  Functor1.hs  Join1.hs  JsonRpc.hs  Pointed1.hs  Session.hs
wakarusa/src/Control/: Remote.hs
wakarusa/src/Control/Remote/: Monad.hs  Object.hs
wakarusa/src/Control/Remote/Object/: MVar.hs
