name:                wakarusa
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Andy Gill
maintainer:          andygill@ku.edu
-- copyright:           
category:            Control
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     
                       Control.Natural,
--                       Control.Natural.Remote,
                       Control.Wakarusa.Session,
                       Control.Wakarusa.Functor,
                       Control.Wakarusa.JsonRpc
                       

  -- other-modules:       
  other-extensions:    TypeFamilies, RankNTypes, GADTs, KindSignatures, MultiParamTypeClasses, FlexibleInstances, FlexibleContexts, FunctionalDependencies, UndecidableInstances, NullaryTypeClasses
  build-depends:       base >=4.7 && <4.8, transformers >=0.3 && <0.4,
                       unordered-containers, aeson, vector, text, constrained-normal, bytestring >= 0.10, scientific
  hs-source-dirs:      src
  default-language:    Haskell2010

executable jsonrpc:
    Main-is:            JsonRpc.hs
    hs-source-dirs:     ideas
    Ghc-options:        -threaded
    Build-depends:      base >=4.7 && <4.8, transformers >=0.3 && <0.4,
                        unordered-containers, aeson, vector, text, constrained-normal, bytestring >= 0.10, scientific, wakarusa

    default-language:    Haskell2010
