name:                wakarusa-examples
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Andy Gill
maintainer:          andygill@ku.edu
-- copyright:           
category:            Control
build-type:          Simple
cabal-version:       >=1.10

executable json-rpc
    Main-is:            JsonRpc.hs
    hs-source-dirs:	json-rpc
    Ghc-options:        -threaded
    Build-depends:      base >=4.7 && <4.8, 
                        unordered-containers, aeson, vector, text, constrained-normal, bytestring >= 0.10, scientific,
                        scotty, wreq,
                        wakarusa
    default-language:    Haskell2010
