name:                wakarusa-examples
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Andy Gill
maintainer:          andygill@ku.edu
-- copyright:           
category:            Control
build-type:          Simple
cabal-version:       >=1.10

executable json-rpc
    Main-is:            JsonRpc.hs
    hs-source-dirs:     json-rpc
    Ghc-options:        -threaded
    Build-depends:      base >=4.7 && <4.8, 
                        wakarusa == 0.1.0.0,
                        aeson == 0.8.*
    default-language:    Haskell2010
