name:                wakarusa-examples
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Andy Gill
maintainer:          andygill@ku.edu
-- copyright:           
category:            Control
build-type:          Simple
cabal-version:       >=1.10

executable json-rpc
    Main-is:            JsonRpc.hs
    hs-source-dirs:     json-rpc
    Ghc-options:        -threaded
    Build-depends:      base >=4.7 && <4.8, 
                        wakarusa == 0.1.0.0,
                        wakarusa-scotty == 0.1.0.0,
                        wakarusa-wreq == 0.1.0.0,
                        aeson == 0.8.*
    default-language:    Haskell2010

executable json-rpc-server
    Main-is:            JsonRpcServer.hs
    hs-source-dirs:     json-rpc
    Ghc-options:        -threaded
    Build-depends:      base >=4.7 && <4.8, 
                        wakarusa == 0.1.0.0,
                        wakarusa-scotty == 0.1.0.0,
                        aeson == 0.8.*,
                        scotty == 0.9.*
    default-language:    Haskell2010


executable small-dsl
    Main-is:            DSL.hs
    hs-source-dirs:     small-dsl
    Ghc-options:        -threaded
    Build-depends:      base >=4.7 && <4.8, 
                        wakarusa == 0.1.0.0,
                        mtl >= 2.0 && < 2.3
        
    default-language:    Haskell2010

--executable sunroof-lite
--    Main-is:            Main.hs
--    hs-source-dirs:     sunroof-lite
--    Ghc-options:        -threaded
--    Build-depends:      base >=4.7 && <4.8, 
--                        wakarusa == 0.1.0.0,
--                        data-reify == 0.6.*
--    default-language:    Haskell2010
