name:                wakarusa-scotty
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Andy Gill
maintainer:          andygill@ku.edu
-- copyright:           
category:            Control
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     
                       Control.Wakarusa.Scotty

  other-extensions:    TypeFamilies, RankNTypes, GADTs, KindSignatures, MultiParamTypeClasses, FlexibleInstances, FlexibleContexts, FunctionalDependencies, UndecidableInstances, NullaryTypeClasses
  build-depends:       base >=4.7 && <4.8, wakarusa == 0.1.0.0, transformers >=0.3 && <0.4,
                         unordered-containers, aeson, vector, text, constrained-normal, bytestring >= 0.10, scientific, scotty
  hs-source-dirs:      .
  default-language:    Haskell2010

