name:                wakarusa-scotty
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Andy Gill
maintainer:          andygill@ku.edu
-- copyright:           
category:            Control
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     
                       Control.Wakarusa.Session.Scotty

  build-depends:       base >=4.7 && <4.8, 
                       wakarusa == 0.1.0.0, 
                       aeson == 0.8.*,
                       transformers >= 0.3.0 && <= 0.4.3,
                       scotty == 0.9.*
  hs-source-dirs:      .
  default-language:    Haskell2010

